corrected header image size and button spacing on services pages

--- a/themes/vatjss/sass/_page-templates.scss
+++ b/themes/vatjss/sass/_page-templates.scss
@@ -82,6 +82,7 @@
   }
 }
 .post-type-archive-services{
+  padding-top: 80px;
   h1{
     color:white;
     font-size: rem(22);
@@ -199,7 +200,7 @@
     padding: 20px 0;
     min-height: 70vh;
     .vatjss-btn-section{
-      margin: 20px 15px;
+      margin: 70px 15px 20px;
       .vatjss-flex-item-mobile-33{
         padding: 0;
       }
@@ -278,6 +279,9 @@
         border-radius:0;
         border-bottom: 1px solid white;
         font-size: rem(16);
+        &:last-of-type {
+          border-bottom: none;
+        }
       }
       button.accordion-services.active, button.accordion-services:hover {
         background-color: $color__border-abbr;
@@ -292,14 +296,17 @@
         height: 0;
         overflow: hidden;
         @include desktop {
-          width: auto;
-          height: auto;
+          width: 0;
+          height: 0;
         }
       }
     }
   }
   .vatjss-financial-services,.vatjss-home-services{
     .vatjss-service-title{
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
       position: absolute;
       top: 0;
       right: 0;
@@ -373,9 +380,13 @@
     .vatjss-service-title{
       padding: 10px;
       width: 100%;
+      height: 70vh;
       background-image: linear-gradient(rgba(0,0,0, 0.5) 0,rgba(0,0,0, 0.5)),url('../../images/syim-photo-3.jpg');
       background-position: center;
       background-size: cover;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
       h1,p{
         color:white;
         text-align: center;
